--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -46,6 +46,6 @@
     <div class="card-body-">
       <h5 class="card-title">Farm Stock</h5>
       <p class="card-text">Get the Fram Stock data and Administartion details</p>
-      <a href="https://appaa123.github.io/KSAUI/farmstock" class="btn btn-primary">FarmStock</a>
+      <a href="/farmstock" class="btn btn-primary">FarmStock</a>
     </div>
   </div>
