--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Krishna Sadan Administartion</a>
-      <button class="navbar-toggler" type="button" (click)="toggleOffcanvas()" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" (click)="toggleOffcanvas()" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>  
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" [class.show]="isOffcanvasOpen">
@@ -46,6 +46,6 @@
     <div class="card-body-">
       <h5 class="card-title">Farm Stock</h5>
       <p class="card-text">Get the Fram Stock data and Administartion details</p>
-      <a href="/farmstock" class="btn btn-primary">FarmStock</a>
+      <a href="https://appaa123.github.io/KSAUI/farmstock" class="btn btn-primary">FarmStock</a>
     </div>
   </div>
