--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,9 +1,18 @@
 <app-navbar></app-navbar>
 <div class="card">
-    <!-- <img src="/KSAUI/KSAManagement/src/assets/fm.jpeg" class="card-img-top" alt="..."> -->
+    <img src="/assets/FarmStock.jpg" class="card-img-top" alt="...">
   
     <div class="card-body-">
       <h5 class="card-title">Farm Stock</h5>
+      <p class="card-text">Get the Fram Stock data and Administartion details</p>
+      <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="/assets/fm.jpeg" class="card-img-top" alt="...">
+  
+    <div class="card-body-">
+      <h5 class="card-title">Food Stock</h5>
       <p class="card-text">Get the Fram Stock data and Administartion details</p>
       <a href="./farmstock" class="btn btn-primary">FarmStock</a>
     </div>
