--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,19 +1,42 @@
 <app-navbar></app-navbar>
-<div class="card">
-    <img src="/assets/FarmStock.jpg" class="card-img-top" alt="...">
-  
-    <div class="card-body-">
-      <h5 class="card-title">Farm Stock</h5>
-      <p class="card-text">Get the Fram Stock data and Administartion details</p>
-      <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="KSAUI/assets/fm.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <img src="/assets/fm.jpeg" class="card-img-top" alt="...">
-  
-    <div class="card-body-">
-      <h5 class="card-title">Food Stock</h5>
-      <p class="card-text">Get the Fram Stock data and Administartion details</p>
-      <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+  <div class="col">
+    <div class="card">
+      <img src="KSAUI/assets/FarmStock.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+      </div>
     </div>
   </div>
+  <div class="col">
+    <div class="card">
+      <img src="KSAUI/assets/FarmStock.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="KSAUI/assets/fm.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
