Updated latest changes

--- a/KSAManagement/src/app/farmstockdetails/farmstockdetails/farmstockdetails.component.html
+++ b/KSAManagement/src/app/farmstockdetails/farmstockdetails/farmstockdetails.component.html
@@ -11,7 +11,7 @@
     <div class="container mt-3">
         <label for="datepicker">Select Date:</label>
         <div class="input-group date">
-            <input type="text" class="form-control" id="datepicker" [(ngModel)]="formData.date" name="date">
+            <input type="datetime" class="form-control" id="datepicker" [(ngModel)]="formData.date" name="date">
             <span class="input-group-text">
                 <i class="bi bi-calendar"></i>
             </span>
