Updated UI to resolve data sync issue

--- a/KSAManagement/src/app/farmstockdetails/farmstockdetails/farmstockdetails.component.html
+++ b/KSAManagement/src/app/farmstockdetails/farmstockdetails/farmstockdetails.component.html
@@ -33,5 +33,5 @@
         <option>...</option>
       </select>
     </div> -->
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+      <button type="submit" class="btn btn-primary">Submit</button>
   </form>
