--- a/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
+++ b/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<button (click)="refreshData()">Refresh Data</button>
 
 <table class="table table-striped">
     <thead>
