--- a/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
+++ b/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
-<button (click)="refreshData()">Refresh Data</button>
-
 <table class="table table-striped">
     <thead>
       <tr>
@@ -18,8 +16,76 @@
         <td>{{data.quantity}}</td>
         <td>{{data.date}}</td>
         <td>{{data.summary}}</td>
+        <td>
+          <button class="btn btn-sm btn-outline-primary" (click)="openEditModal(data)">
+            <i class="bi bi-pencil-square"></i>
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-sm btn-outline-danger" (click)="openDeleteModal(data)">
+          <i class="bi bi-trash"></i>
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
+
+  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editModalLabel">Edit Record</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label class="form-label">Type</label>
+              <input type="text" class="form-control" name="type" [(ngModel)]="this.selectedRecord.type">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Days</label>
+              <input type="text" class="form-control" name="days" [(ngModel)]="selectedRecord.days">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Quantity</label>
+              <input type="number" class="form-control" name="quantity" [(ngModel)]="selectedRecord.quantity">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Date</label>
+              <input type="text" class="form-control" name="date" [(ngModel)]="selectedRecord.date">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Summary</label>
+              <input type="text" class="form-control" name="summary" [(ngModel)]="selectedRecord.summary">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" (click)="saveChanges()">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- delete model -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete <strong>{{ selectedRecord?.name }}</strong>?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" (click)="deleteRecord()">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <a href="./dashboard" class="btn btn-primary">Back</a>
