--- a/KSAManagement/src/app/navbar/navbar.component.html
+++ b/KSAManagement/src/app/navbar/navbar.component.html
@@ -1,12 +1,25 @@
 <nav class="navbar" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand" href="./dashboard">Krishna Sadan Administartion</a>
+      <li class="navbar">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          User
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+        </ul>
+      </li>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" (click)="toggleOffcanvas()" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>  
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" [class.show]="isOffcanvasOpen">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title">Dark offcanvas</h5>
+          <h5 class="offcanvas-title">Krishna Sadan Admin Bar</h5>
           <button type="button" class="btn-close btn-close-black" (click)="closeOffcanvas()" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
