--- a/KSAManagement/src/app/auth/auth/auth.component.html
+++ b/KSAManagement/src/app/auth/auth/auth.component.html
@@ -1,5 +1,5 @@
 <h1>KS Login page</h1>
-
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <form class="row g-3" (ngSubmit)="onSubmit()">
 <div class="row g-3 align-items-center">
     <div class="row-auto">
