Added spinner to all components

--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
