--- a/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
+++ b/KSAManagement/src/app/farmstock/farmstock/farmstock.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <table class="table table-striped">
     <thead>
       <tr>
