Updated spinner timeout

--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+        <a href="./farmstock" onclick="loadSpinner()" class="btn btn-primary">FarmStock</a>
       </div>
     </div>
   </div>
@@ -17,7 +17,7 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <a href="./farmstock" class="btn btn-primary">FarmStock</a>
+        <a href="./farmstock"  onclick="loadSpinner()" class="btn btn-primary">FarmStock</a>
       </div>
     </div>
   </div>
