Updated verification API URL

--- a/KSAManagement/src/app/navbar/navbar.component.html
+++ b/KSAManagement/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" href="./dashboard">Krishna Sadan Administartion</a>
       <li class="navbar">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          User
+          {{user}}
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="#">Action</a></li>
