Added Login layout

--- a/KSAManagement/src/app/auth/auth/auth.component.html
+++ b/KSAManagement/src/app/auth/auth/auth.component.html
@@ -1,5 +1,7 @@
 <h1>KS Login page</h1>
 <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<div background-image="KSAUI/assets/Login_BG.jpeg">
+<div class="formblock">
 <form class="row g-3" (ngSubmit)="onSubmit()">
 <div class="row g-3 align-items-center">
     <div class="row-auto">
@@ -20,3 +22,5 @@
     </div>
   </div>
 </form>
+</div>
+</div>
