Updated image path

--- a/KSAManagement/src/app/auth/auth/auth.component.css
+++ b/KSAManagement/src/app/auth/auth/auth.component.css
@@ -2,7 +2,7 @@
     display: block;
     height: 100vh;
     width: auto;
-    background-image: url('/assets/KS_BGImage.jpeg');
+    background-image: url('/KSAUI/assets/KS_BGImage.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
