Updated CSS changes

--- a/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
+++ b/KSAManagement/src/app/dashboard/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
     <div class="card">
       <img src="/KSAUI/assets/fm.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Farm Stock Management</h5>
+        <p class="card-text">Krishna Sadan FarmStock details</p>
         <a href="./farmstock" onclick="loadSpinner()" class="btn btn-primary">FarmStock</a>
       </div>
     </div>
